# FunscriptVideo

./: Cargo.toml  README.md  SPEC.md  example_metadata.json  example_metadata.jsonc  fsv-schema.json
src/: db_client.rs  file_util.rs  fsv.rs  funscript.rs  lib.rs  metadata.rs  semver.rs
